--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="https://cdn2.steamgriddb.com/icon/65ae27b8c33157282761f37083da12dd.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <script src="https://accounts.google.com/gsi/client" async></script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
